<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="200dp"
    android:background="@color/PaleYellow"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:layout_width="180dp">

    <Button
        android:text="@string/Sall"
        android:id="@+id/bt_pu_all"
        android:textColor="@android:color/background_dark"
        android:background="@color/colorPrimary"
        android:layout_height="30dp"
        android:layout_above="@+id/tv_pu"
        android:layout_alignStart="@+id/separator"
        android:layout_marginBottom="2dp"
        android:textAllCaps="false"
        android:layout_width="38dp"
        android:textSize="12sp" />

    <ImageView
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:id="@+id/bt_pu_plus"
        android:background="@color/ColorSecondary"
        android:tint="@android:color/background_light"
        android:src="@android:drawable/button_onoff_indicator_off"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/separator" />

    <Button
        android:text="@string/Sconfirm"
        android:layout_width="400dp"
        android:layout_below="@+id/tv_pu_total"
        android:id="@+id/bt_pu_confirm"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        android:layout_alignEnd="@+id/tv_pu_total"
        android:layout_alignStart="@+id/separator" />

    <TextView
        android:text="@string/Stotal"
        android:layout_height="38dp"
        android:id="@+id/tv_pu"
        android:textSize="16sp"
        android:textColor="@android:color/background_dark"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_pu_amount"
        android:gravity="center"
        android:layout_width="55dp" />

    <EditText
        android:layout_height="38dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/bt_pu_input"
        android:text="@string/S000"
        android:layout_width="90dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/bt_pu_plus"
        android:layout_marginStart="16dp"
        android:background="@color/ColorSecondary" />

    <TextView
        android:text="@string/None"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:id="@+id/tv_pu_amount"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="gravity"
        android:layout_below="@+id/bt_pu_input"
        android:layout_alignStart="@+id/bt_pu_input" />

    <TextView
        android:text="TextView"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:id="@+id/tv_pu_total"
        android:gravity="center"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/tv_pu_amount"
        android:layout_alignStart="@+id/tv_pu_amount" />

    <TextView
        android:id="@+id/separator"
        android:layout_height="2dp"
        android:layout_below="@+id/bt_pu_all"
        android:layout_alignParentStart="true"
        android:layout_width="150dp"
        android:background="@android:color/darker_gray" />

</RelativeLayout>