<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="apk.romero.debtor.ui.Menu"
    android:orientation="vertical"
    android:background="@color/PaleYellow">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/PPbar"
        android:gravity="center|start"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:textColor="@color/PaleYellow"
            android:textStyle="bold"
            android:layout_weight="0.18"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fab_margin">

        <Button
            android:text="@string/Sdeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_deal"
            android:importantForAccessibility="0"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp" />

        <Button
            android:text="@string/Sexit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_exit"
            android:importantForAccessibility="0"
            android:background="@color/colorPrimary"
            android:layout_gravity="bottom|center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="49dp"
            android:textSize="16sp" />

        <Button
            android:text="@string/Smylists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_mylists"
            android:importantForAccessibility="0"
            android:background="@color/colorPrimary"
            android:shadowColor="@color/ColorSecondary"
            android:layout_marginTop="89dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>
