<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_shared_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="apk.romero.debtor.ui.SharedPayment"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/PPbar"
        android:gravity="center|start"
        android:weightSum="1"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="?attr/actionModeCloseDrawable"
            android:id="@+id/bt_sharedpayment_back"
            android:layout_weight="0.07"
            android:clickable="false"
            tools:ignore="ContentDescription" />

        <TextView
            android:text="@string/Sdeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:textColor="@color/PaleYellow"
            android:textStyle="bold"
            android:layout_weight="0.18"
            android:layout_marginStart="16dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.69" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:background="@color/Background">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8">

            <android.support.v7.widget.RecyclerView android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="8"
                android:id="@+id/recycled_view">

            </android.support.v7.widget.RecyclerView>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/bt_add"
                android:layout_gravity="bottom|end"
                app:backgroundTint="@color/colorPrimary"
                android:tint="@color/ColorSecondary"
                app:rippleColor="@android:color/darker_gray"
                app:srcCompat="@android:drawable/ic_input_add"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp" />
        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/Stotal"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/textView3"
                android:layout_weight="0.18"
                android:gravity="center_vertical|end"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="120dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/tv_total_amount"
                android:background="@color/PaleYellow"
                android:layout_height="36dp"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:hint="@string/S000"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical|center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/PaleYellow"
            android:gravity="center">

            <Button
                android:text="@string/Scalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bt_calculate"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:autoText="false" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
